# ShademEngine

./: .gitignore  BuildCMake.bat  CMakeLists.txt  README.md  ss
Shadem/Assets/Defalut_Resources/Models/: ludzikBLENDA.fbx  ludzikBLENDO.fbx
Shadem/Headers/Camera/: Camera.h
Shadem/Headers/CubeMarching/: CmObject.h  Generator.h  GridGenerator.h  MarchingCube.h  TrianglesGenerator.h  Types.h
Shadem/Headers/Factory/: ComplexObjectFactory.h  CubeMarchingObjectFactory.h  Factory.h  LightObjectFactory.h  PrimitiveObjectFactory.h  RayMarchingObjectFactory.h
Shadem/Headers/GUI/: GUI.h
Shadem/Headers/Objects/: Attributes.h  InstancedObject.h  Mesh.h  Object.h  ObjectTypes.h  Primitives.h  RMObject.h
Shadem/Headers/Objects/Lights/: Light.h
Shadem/Headers/RayMarching/: SPH.h
Shadem/Headers/Renderer/: CMRenderer.h  RMRenderer.h  Renderer.h  StandardRenderer.h
Shadem/Headers/ResourceManager/: ResourceManager.h
Shadem/Headers/Scene/: Scene.h
Shadem/Headers/Scene/Level/: CmLevel.h  CustomLevel.h  RmLevel.h
Shadem/Headers/ShademApplication/: ShademEngine.h
Shadem/Headers/Shader/: Shader.h
Shadem/Headers/ThreadPool/: ThreadPool.h
Shadem/Headers/Window/: Controller.h  Window.h
Shadem/Shaders/BasicShader/: Cshader.shader  FLightShader.shader  FongLight.shader  Fshader.glsl  Fshader.shader  InstanceVshader.shader  Vshader.glsl  Vshader.shader
Shadem/Shaders/CMShaders/: CubeMarching.shader  CubeMarchingTables.shader  FshaderCM.shader  Noise.shader  VshaderCM.shader  geometryShaderCM2D.shader  geometryShaderCM3D.shader  tessellationTCS.shader  tessellationTES.shader
Shadem/Shaders/ComputeShader/: CSphDensity.shader  CSphForces.shader  CSphNewScalarsShader.shader  CSphParticles.shader  CSphScalarsShader.shader  CSphShader.shader  Cshader.shader  Fshader.shader  Vshader.shader
Shadem/Shaders/RMShaders/: BasicUniforms.shader  Main.shader  SphereFshader.glsl  SphereFshader.shader  Vshader.glsl  Vshader.shader
Shadem/Shaders/RMShaders/SPH/: SPHFshader.shader  density.shader  forces.shader  particles.shader
Shadem/Source/Camera/: Camera.cpp
Shadem/Source/CubeMarching/: CmObject.cpp  Generator.cpp  GridGenerator.cpp  MarchingCube.cpp  Noise.cpp  Random.cpp  SPHSystem.cpp  Sphere.cpp  TrianglesGenerator.cpp
Shadem/Source/Factory/: ComplexObjectFactory.cpp  CubeMarchingObjectFactory.cpp  LightObjectFactory.cpp  PrimitiveObjectFactory.cpp  RayMarchingObjectFactory.cpp
Shadem/Source/GUI/: GUI.cpp
Shadem/Source/Objects/: InstancedObject.cpp  Mesh.cpp  Object.cpp  Primitives.cpp  RMObject.cpp
Shadem/Source/Objects/Lights/: Light.cpp
Shadem/Source/RayMarching/: SPH.cpp
Shadem/Source/Renderer/: CMRenderer.cpp  RMRenderer.cpp  Renderer.cpp  StandardRenderer.cpp
Shadem/Source/ResourceManager/: ResourceManager.cpp
Shadem/Source/Scene/: Scene.cpp
Shadem/Source/Scene/Level/: CmLevel.cpp  CustomLevel.cpp  RmLevel.cpp
Shadem/Source/ShademApplication/: Shadem.cpp  ShademApp.cpp  ShademEngine.cpp
Shadem/Source/Shader/: Shader.cpp
Shadem/Source/Window/: CMakeLists.txt  Controller.cpp  Window.cpp
include/PerlinNoise/: SimplexNoise.cpp  SimplexNoise.h
include/glad/: glad.c  glad.h
include/imgui/: CMakeLists.txt
lib/: assimp-vc143-mt.exp  glfw3.lib
shaders/: Vshader.glsl
src/: Camera.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Primitives.cpp  Primitives.h  Shadem.cpp  Shader.cpp  Shader.h
